MutualGroupDMs: fix weird spacing

--- a/src/plugins/mutualGroupDMs/style.css
+++ b/src/plugins/mutualGroupDMs/style.css
@@ -1,4 +1,3 @@
 .vc-mutual-gdms-tab-bar {
     gap: 0;
-    justify-content: space-between;
 }
